--- a/user/user_pwd.html
+++ b/user/user_pwd.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="assets/css/user/user_pwd.css" />
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="../assets/css/user/user_pwd.css" />
 </head>
 
 <body>
@@ -44,13 +44,13 @@
     </div>
 
     <!-- 导入 layui 的 js -->
-    <script src="assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
     <!-- 导入 jQuery -->
-    <script src="assets/lib/jquery.js"></script>
+    <script src="../assets/lib/jquery.js"></script>
     <!-- 导入 baseAPI -->
-    <script src="assets/js/baseAPI.js"></script>
+    <script src="../assets/js/baseAPI.js"></script>
     <!-- 导入自己的 js -->
-    <script src="assets/js/user/user_pwd.js"></script>
+    <script src="../assets/js/user/user_pwd.js"></script>
 </body>
 
 </html>
