--- a/article/art_cate.html
+++ b/article/art_cate.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="assets/css/article/art_cate.css" />
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="../assets/css/article/art_cate.css" />
 </head>
 
 <body>
@@ -99,15 +99,15 @@
     </script>
 
     <!-- 导入 layui 的js -->
-    <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
     <!-- 导入 jQuery -->
-    <script src="/assets/lib/jquery.js"></script>
+    <script src="../assets/lib/jquery.js"></script>
     <!-- 导入 baseAPI -->
-    <script src="/assets/js/baseAPI.js"></script>
+    <script src="../assets/js/baseAPI.js"></script>
     <!-- 导入模板引擎 -->
-    <script src="/assets/lib/template-web.js"></script>
+    <script src="../assets/lib/template-web.js"></script>
     <!-- 导入自己的 js -->
-    <script src="/assets/js/article/art_cate.js"></script>
+    <script src="../assets/js/article/art_cate.js"></script>
 </body>
 
 </html>
