--- a/article/art_list.html
+++ b/article/art_list.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="assets/css/article/art_list.css" />
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="../assets/css/article/art_list.css" />
 </head>
 
 <body>
@@ -21,10 +21,10 @@
                 </div>
                 <div class="layui-form-item layui-inline">
                     <select name="state">
-              <option value="">所有状态</option>
-              <option value="已发布">已发布</option>
-              <option value="草稿">草稿</option>
-            </select>
+            <option value="">所有状态</option>
+            <option value="已发布">已发布</option>
+            <option value="草稿">草稿</option>
+          </select>
                 </div>
                 <div class="layui-form-item layui-inline">
                     <button class="layui-btn" lay-submit lay-filter="formDemo">筛选</button>
@@ -80,12 +80,12 @@
     </script>
 
     <!-- 导入第三方的 JS 插件 -->
-    <script src="/assets/lib/layui/layui.all.js"></script>
-    <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/baseAPI.js"></script>
-    <script src="/assets/lib/template-web.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/jquery.js"></script>
+    <script src="../assets/js/baseAPI.js"></script>
+    <script src="../assets/lib/template-web.js"></script>
     <!-- 导入自己的 JS 脚本 -->
-    <script src="/assets/js/article/art_list.js"></script>
+    <script src="../assets/js/article/art_list.js"></script>
 </body>
 
 </html>
