--- a/user/user_info.html
+++ b/user/user_info.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 导入 layui 的样式 -->
-    <link rel="stylesheet" href="assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css" />
     <!-- 导入自己的样式 -->
-    <link rel="stylesheet" href="assets/css/user/user_info.css" />
+    <link rel="stylesheet" href="../assets/css/user/user_info.css" />
 </head>
 
 <body>
@@ -49,13 +49,13 @@
     </div>
 
     <!-- 导入 layui 的 js -->
-    <script src="assets/lib/layui/layui.all.js"></script>
+    <script src="../assets/lib/layui/layui.all.js"></script>
     <!-- 导入 jquery -->
-    <script src="assets/lib/jquery.js"></script>
+    <script src="../assets/lib/jquery.js"></script>
     <!-- 导入 baseAPI -->
-    <script src="assets/js/baseAPI.js"></script>
+    <script src="../assets/js/baseAPI.js"></script>
     <!-- 导入自己的 js -->
-    <script src="assets/js/user/user_info.js"></script>
+    <script src="../assets/js/user/user_info.js"></script>
 </body>
 
 </html>
