--- a/article/art_pub.html
+++ b/article/art_pub.html
@@ -27,7 +27,7 @@
                 <!-- 第二行 -->
                 <div class="layui-form-item">
                     <label class="layui-form-label">文章类别</label>
-                    <div class="layui-input-block">
+                    <div class="layui-input-block select_cate">
                         <select name="cate_id" lay-verify="required"></select>
                     </div>
                 </div>
